[project]
name = "pyems"
version = "0.1.0"
description = "HYUNDAI KEFICO Co.,Ltd. EMS 자체제어기 프로젝트용 툴박스"
authors = [{ name = "LEE JEHYEUK", email = "JeHyeuk.Lee@hyundai-kefico.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
